--- a/src/main/resources/com/quiz/quizapp/home.fxml
+++ b/src/main/resources/com/quiz/quizapp/home.fxml
@@ -1,21 +1,34 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="430.0" prefWidth="938.0" style="-fx-background-color: white; -fx-background-radius: 32px; -fx-border-radius: 32px;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.quiz.quizapp.controller.HomeController">
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.text.Font?>
+<?import javafx.geometry.Insets?>
+<AnchorPane prefHeight="800.0" prefWidth="430.0"
+            style="-fx-background-color: white; -fx-background-radius: 32px; -fx-border-radius: 32px;"
+            xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1"
+            fx:controller="com.quiz.quizapp.controller.HomeController">
     <children>
-        <Label layoutX="433.0" layoutY="63.0" text="Queazy">
+        <ImageView fitHeight="814.0" fitWidth="435.0" pickOnBounds="true">
+            <image>
+                <Image url="@../../../images/bg1.png" />
+            </image>
+        </ImageView>
+        <ImageView fitHeight="210.0" fitWidth="385.0" layoutX="22.0" layoutY="149.0" pickOnBounds="true" preserveRatio="true">
+            <image>
+                <Image url="@../../../images/logo1.png" />
+            </image>
+        </ImageView>
+        <Button fx:id="playquizbtn" alignment="CENTER" layoutX="127.0" layoutY="602.0" mnemonicParsing="false" style="-fx-label-padding: 10px 20px; -fx-background-color: #504099; -fx-border-radius: 200px; -fx-background-radius: 50px;" text="START PLAYING" textFill="#fcfcfc">
             <font>
-                <Font name="Open Sans Extrabold" size="30.0" />
+                <Font name="Calibri Bold" size="18.0" />
             </font>
-        </Label>
-        <Button fx:id="playquizbtn" layoutX="358.0" layoutY="209.0" mnemonicParsing="false" prefHeight="68.0" prefWidth="304.0" style="-fx-background-color: dodgerblue; -fx-background-radius: 32px;; -fx-border-radius: 32px;" text="PLAY" textFill="WHITE">
-            <font>
-                <Font name="Open Sans Semibold" size="20.0" />
-            </font>
+            <opaqueInsets>
+                <Insets />
+            </opaqueInsets>
         </Button>
     </children>
 </AnchorPane>
